# automate-prov

./: README.md  pyproject.toml
automate_prov/: index.py
automate_prov/backend/: index.js  search_acct.py
automate_prov/backend/js/: index.js
automate_prov/backend/server/: scan_image.py
automate_prov/frontend/: index.html  style.css
automate_prov/frontend/style/: style.css
automate_prov/ramais/teste/: teste.csv
