[tool.poetry]
name = "automate-prov"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "automate_prov"}]

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.20.0"
fastapi = "^0.95.0"
uvicorn = "^0.21.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
